--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,15 @@
 /HR 
 /source
 /eccv_2014_deepresolution.pdf
+/models
+/venv
+/HR1
+/LR1
+/HR2
+/LR2
+/GAN
+/gen_e_1.h5
+/gen_e_2.h5
+/gen_e_3.h5
+/gen_e_4.h5
+/gen_e_5.h5
